--- a/src/app/componentes/agenda/nuevo-agenda/nuevo-agenda.component.html
+++ b/src/app/componentes/agenda/nuevo-agenda/nuevo-agenda.component.html
@@ -105,14 +105,14 @@
 
             <button type="submit" class="btn btn-outline-success m-1"
                     [disabled]="nuevaAgenda.invalid">
-              Guardar
-            </button>
-            <button type="button" class="btn btn-outline-secondary m-1" [routerLink]="['/agenda']">
-              Volver
+              Guardar y salir
             </button>
             <button type="submit" class="btn btn-outline-success m-1"
                     [disabled]="nuevaAgenda.invalid" (click)="cambiarNavigate()">
               Guardar y crear agenda
+            </button>
+            <button type="button" class="btn btn-outline-secondary m-1" [routerLink]="['/agenda']">
+              Volver
             </button>
 
           </form>
