--- a/src/app/componentes/datos-sanitario/crear-datos-sanitarios/crear-datos-sanitarios.component.html
+++ b/src/app/componentes/datos-sanitario/crear-datos-sanitarios/crear-datos-sanitarios.component.html
@@ -20,6 +20,8 @@
             </div>
           </div>
         </div>
+      </form>
+      <form [formGroup]="formularioRecurso">
         <div class="row mb-3">
           <div class="col-sm-8 col-md-8 col-lg-7 col-xl-7">
             <div class="form-group">
@@ -53,7 +55,7 @@
           <div class="col-md-12 col-lg-1 col-lg-3 col-sm-12 col-xl-3 d-flex align-items-start  ">
 
             <div class="col-6">
-              <button type="button" (click)="crearRelacion()" class="btn btn-info mt-4 botonOperacion p-0">
+              <button type="button" (click)="crearRelacion()" class="btn btn-info mt-4 botonOperacion p-0" [disabled]=!formularioRecurso.valid>
                 <i class="fa-solid fa-arrow-down"></i>
               </button>
             </div>
@@ -90,8 +92,8 @@
 
           </div>
         </div>
-
       </form>
+
       <div class="row mt-4" *ngIf="mostrarTabla">
         <table class="table text-center">
           <tr>
