--- a/src/app/componentes/datos-sanitario/editar-datos-sanitario/editar-datos-sanitario.component.html
+++ b/src/app/componentes/datos-sanitario/editar-datos-sanitario/editar-datos-sanitario.component.html
@@ -21,6 +21,9 @@
             </div>
           </div>
         </div>
+        </form>
+        
+      <form [formGroup]="formularioRecurso">
         <div class="row mb-3">
           <div class="col-sm-8 col-md-8 col-lg-7 col-xl-7">
             <div class="form-group">
@@ -53,7 +56,7 @@
           <div class="col-md-12 col-lg-1 col-lg-3 col-sm-12 col-xl-3 d-flex align-items-start  ">
             <ng-container>
               <div class="col-6">
-                <button type="button" (click)="crearRelacion()" class="btn btn-info mt-4 botonOperacion p-0" [disabled]="blockEditar">
+                <button type="button" (click)="crearRelacion()" class="btn btn-info mt-4 botonOperacion p-0" [disabled]="!formularioRecurso.valid">
                   <i class="fa-solid fa-arrow-down"></i>
                 </button>
               </div>
