Seguimiento teleoperador: Hay veces que la tabla sale vacía, comprobar datos vacíos. #60

--- a/src/app/componentes/seguimiento_teleoperador/lista-alarmas-resueltas/lista-alarmas-resueltas.component.html
+++ b/src/app/componentes/seguimiento_teleoperador/lista-alarmas-resueltas/lista-alarmas-resueltas.component.html
@@ -10,7 +10,7 @@
       </ol>
     </nav>
     <h3 class="component-title">
-      Teleoperador: {{peticion.first_name}} {{peticion.second_name}}
+      Teleoperador: {{peticion?.first_name}} {{peticion?.second_name}}
     </h3>
 
 
