--- a/src/app/componentes/datos-sanitario/crear-datos-sanitarios/crear-datos-sanitarios.component.html
+++ b/src/app/componentes/datos-sanitario/crear-datos-sanitarios/crear-datos-sanitarios.component.html
@@ -27,10 +27,11 @@
             <div class="form-group">
               <label for="recurso" class="form-label">Recurso <span class="obligatorios">*</span></label>
               <ng-select id="recurso" name="recurso"
-                         formControlName="recurso" (change)="seleccionarId($event)">
+                         formControlName="recurso" (change)="seleccionarId($event)" title="{{this?.recursoMostrar?.nombre}} - {{this?.recursoMostrar?.id_tipos_recurso_comunitario?.nombre}} - {{this?.recursoMostrar?.id_direccion?.localidad}}">
+
                 <ng-option class="form-select" *ngFor="let recurso of recursosMostrados,let i = index"
-                           [value]="recurso.id">{{ recurso.nombre}} - {{recurso.id_tipos_recurso_comunitario.nombre}}
-                  - {{recurso.id_direccion.localidad}}</ng-option>
+                           [value]="recurso.id">{{ recurso?.nombre}} - {{recurso?.id_tipos_recurso_comunitario?.nombre}}
+                  - {{recurso?.id_direccion?.localidad}}</ng-option>
               </ng-select>
             </div>
           </div>
