--- a/src/app/componentes/persona/crear-persona/crear-persona.component.html
+++ b/src/app/componentes/persona/crear-persona/crear-persona.component.html
@@ -150,8 +150,10 @@
           <div class="col-12 col-lg-4 col-lg-4">
             <div class="form-group">
               <label for="provincia" class="form-label text-start">Provincia <span class="obligatorios">*</span></label>
-              <input type="text" name="provincia" id="provincia" class="form-control "
-                     required maxlength="200" placeholder="Provincia" formControlName="provincia">
+              <ng-select id="tipoTeleasistencia" formControlName="provincia" id="provincia" title="{{formulario.value.provincia}}">
+                <ng-option *ngFor="let provincia of listaProvincias; let i = index"
+                           [value]="provincia" [title]="provincia">{{provincia}}</ng-option>
+              </ng-select>
             </div>
             <div *ngIf="controles.provincia.invalid && (controles.provincia.dirty || controles.provincia.touched)"
                  class="alert alert-secondary"
@@ -216,7 +218,7 @@
                       rows="5"></textarea>
           </div>
         </div>
-        <div class="text-center">
+        <div class="mt-2 text-center">
           <button [disabled]="formulario.invalid" type="submit" class="btn btn-outline-success m-1" (click)="contraer()"
                   data-bs-toggle="collapse"
                   data-bs-target="#datosPersonales ,#datosSanitarios" aria-expanded="false"
