--- a/src/app/componentes/vivienda/crear-tipo-vivienda/crear-vivienda.component.html
+++ b/src/app/componentes/vivienda/crear-tipo-vivienda/crear-vivienda.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="formulario" (submit)="nuevaVivienda()"
           [ngClass]="this.mostrar || this.mostrarModificar ? 'inactiveForm':''">
 
-      <div class="row mb-3 form-group">
+      <div class="row mb-3">
         <label for="nombre" class="form-label text-start">Tipo de Vivienda <span
           class="obligatorios">*</span></label>
         <div class="col-12 col-lg pb-1 pb-lg-0">
@@ -39,13 +39,13 @@
 
 
       <div class="row mb-3">
-        <div class="form-group col-12">
+        <div class="col-12">
           <label for="text_area" class="form-label text-start">Acceso a la vivienda</label>
           <textarea formControlName="text_area" name="text_area" id="text_area" class="form-control"></textarea>
         </div>
       </div>
       <div class="row mb-3">
-        <div class="form-group col-12">
+        <div class="col-12">
           <label for="text_area" class="form-label text-start">Otros datos de la vivienda</label>
           <textarea formControlName="text_area2" name="text_area" id="text_area2" class="form-control"></textarea>
         </div>
