--- a/src/app/componentes/agenda/item-agenda/item-agenda.component.html
+++ b/src/app/componentes/agenda/item-agenda/item-agenda.component.html
@@ -11,10 +11,11 @@
   <button *ngIf="agenda.fecha_resolucion === null" [disabled]="botonDes()" type="submit" class="btn btn-outline-success m-1" [routerLink]="['/historico_agenda/nuevo', agenda.id]">
     <i class="fa fa-check"></i>
   </button>
-  <button type="submit" class="btn btn-outline-warning btn-modify"
+  <button type="submit" class="btn btn-outline-warning btn-modify" *ngIf="agenda.fecha_resolucion == null" 
           [routerLink]="['/agenda/modificar', agenda.id]">
     <i class="fa fa-pen"></i>
   </button>
+
   <!-- Button trigger modal -->
   <button type="submit" class="btn btn-outline-danger m-1" (click)="modalConfirmacion()"
   ><i class="fa fa-trash"></i></button>
