--- a/src/app/componentes/agenda/modificar-agenda/modificar-agenda.component.html
+++ b/src/app/componentes/agenda/modificar-agenda/modificar-agenda.component.html
@@ -71,7 +71,8 @@
       <div class="form-group mb-3">
         <label for="fecha_prevista" class="form-label">Fecha prevista</label>
         <input type="datetime-local" name="fecha_prevista" id="fecha_prevista" class="form-control"
-               required maxlength="200" formControlName="fecha_prevista" [value]="agenda.fecha_prevista" placeholder="{{agenda.fecha_prevista}}">
+              min='{{getToday()}}' 
+              required maxlength="200" formControlName="fecha_prevista" [value]="agenda.fecha_prevista" placeholder="{{agenda.fecha_prevista}}">
         <div *ngIf="form.fecha_prevista.invalid && (form.fecha_prevista.dirty || form.fecha_prevista.touched)" class="alert alert-secondary" role="alert">
           <div *ngIf="form.fecha_prevista.errors?.required">
             La fecha prevista es obligatoria.
