--- a/src/app/components/recursos/recurso-comunitario/crear-recurso-comunitario/crear-recurso-comunitario.component.html
+++ b/src/app/components/recursos/recurso-comunitario/crear-recurso-comunitario/crear-recurso-comunitario.component.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="form-group mb-3 row">
-        <label for="tipo_recursos_comunitario" class="form-label text-start p-0">Tipo de recurso comunitario</label>
+        <label for="tipo_recursos_comunitario" class="form-label text-start p-0">Tipo de recurso {{clasificacion?.nombre}}</label>
         <div class="col-12 col-lg  p-0 pb-1 pb-lg-0">
           <ng-select id="tipo_recursos_comunitario" name="tipo_recurso_comunitario" formControlName="tipo_recursos_comunitario">
             <!-- La variable tipo_recurso_comunitario será iterada y se mostrarán todos los tipos de recursos comunitarios -->
@@ -51,7 +51,7 @@
           </ng-select>
           <div *ngIf="valorForm.tipo_recursos_comunitario.invalid && (valorForm.tipo_recursos_comunitario.dirty || valorForm.tipo_recursos_comunitario.touched)" class="alert alert-secondary" role="alert">
             <div *ngIf="valorForm.tipo_recursos_comunitario.errors?.required">
-              El tipo de recurso comunitario es obligatorio
+              El tipo de recurso {{clasificacion?.nombre}} es obligatorio
             </div>
           </div>
         </div>
