--- a/src/app/components/recursos/recurso-comunitario/modificar-recurso-comunitario/modificar-recurso-comunitario.component.html
+++ b/src/app/components/recursos/recurso-comunitario/modificar-recurso-comunitario/modificar-recurso-comunitario.component.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="form-group mb-3">
-      <label for="tipo_recurso_comunitario" class="form-label">Tipo de recurso comunitario</label>
+      <label for="tipo_recurso_comunitario" class="form-label">Tipo de recurso {{clasificacion?.nombre}}</label>
       <div class="col-12 p-0 pb-1 pb-lg-0">
         <ng-select id="tipo_recurso_comunitario" name="tipo_recurso_comunitario" formControlName="clasificacion_recursos_comunitario">
           <ng-option *ngFor="let tipo_recurso_comunitario of tipos_recursos_comunitarios"
@@ -47,7 +47,7 @@
         </ng-select>
         <div *ngIf="valorForm.clasificacion_recursos_comunitario.invalid && (valorForm.clasificacion_recursos_comunitario.dirty || valorForm.clasificacion_recursos_comunitario.touched)" class="alert alert-secondary" role="alert">
           <div *ngIf="valorForm.clasificacion_recursos_comunitario.errors?.required">
-            El tipo de recurso comunitario es obligatorio
+            El tipo de recurso {{clasificacion?.nombre}} es obligatorio
           </div>
         </div>
       </div>
