--- a/src/app/componentes/seguimiento_teleoperador/lista-seguimiento-teleoperador/user-agendas-alarmas-resueltas.component.html
+++ b/src/app/componentes/seguimiento_teleoperador/lista-seguimiento-teleoperador/user-agendas-alarmas-resueltas.component.html
@@ -16,13 +16,13 @@
         <tr class="table-purple">
 
 
-          <th class="ordenable" (click)="ordenacionTabla(0, 'string')" scope="col">Nombre <i class="fas fa-sort"></i>
+          <th class="ordenable" (click)="ordenacionTabla(0, 'first_name')" scope="col">Nombre <i class="fas fa-sort"></i>
           </th>
-          <th class="ordenable" (click)="ordenacionTabla(1, 'string')" scope="col">Apellidos <i class="fas fa-sort"></i>
+          <th class="ordenable" (click)="ordenacionTabla(1, 'second_name')" scope="col">Apellidos <i class="fas fa-sort"></i>
           </th>
-          <th class="ordenable" (click)="ordenacionTabla(2, 'number')" scope="col">Alarmas Totales <i
+          <th class="ordenable" (click)="ordenacionTabla(3, 'agendas_total','','number')" scope="col">Agendas Totales <i
             class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(3, 'string')" scope="col">Agendas Totales <i
+          <th class="ordenable" (click)="ordenacionTabla(2, 'alarmas_total','','number')" scope="col">Alarmas Totales <i
             class="fas fa-sort"></i></th>
           <th scope="col"></th>
         </tr>
