--- a/src/app/componentes/user/lista-users/lista-users.component.html
+++ b/src/app/componentes/user/lista-users/lista-users.component.html
@@ -17,12 +17,12 @@
       <table id="tableList" class="table table-hover text-center">
         <thead>
         <tr class="table-purple">
-          <th class="ordenable" (click)="ordenacionTabla(0, 'string')" scope="col">Imagen <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(1, 'string')" scope="col">Nombre de usuario <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(2, 'string')" scope="col">Nombre <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(3, 'string')" scope="col">Apellidos <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(4, 'string')" scope="col">Email <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(5, 'string')" scope="col">Grupo <i class="fas fa-sort"></i></th>
+          <th scope="col">Imagen</th>
+          <th class="ordenable" (click)="ordenacionTabla(1, 'username')" scope="col">Nombre de usuario <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(2, 'first_name')" scope="col">Nombre <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(3, 'last_name')" scope="col">Apellidos <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(4, 'email')" scope="col">Email <i class="fas fa-sort"></i></th>
+          <th scope="col">Grupo</th>
           <th scope="col"></th>
         </tr>
         </thead>
