Resuelto algunos errores menores

--- a/src/app/componentes/datos-sanitario/editar-datos-sanitario/editar-datos-sanitario.component.html
+++ b/src/app/componentes/datos-sanitario/editar-datos-sanitario/editar-datos-sanitario.component.html
@@ -40,7 +40,7 @@
           <div class="col-sm-4 col-md-4 col-lg-2 col-xl-2">
             <div class="form-group">
               <label for="tiempo" class="form-label">Tiempo(min)<span class="obligatorios">*</span></label>
-              <input type="number" name="tiempo" id="tiempo" class="form-control" formControlName="tiempo"
+              <input type="number" name="tiempo" id="tiempo" class="form-control" formControlName="tiempo" 
                      [readonly]="blockEditar">
               <div *ngIf="tiempo.invalid && (tiempo.dirty || tiempo.touched)"
                    class="alert alert-secondary text-center" role="alert">
@@ -111,9 +111,9 @@
             <td>{{relacion?.id_recurso_comunitario.id_direccion.localidad}}</td>
             <td>{{relacion?.tiempo_estimado}}</td>
 
-            <td>
+            <td  *ngIf="!blockEditar">
               <button class="btn btn-outline-danger" (click)="borrarRecurso(relacion?.id, i)">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" 
                      viewBox="0 0 16 16">
                   <path
                     d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
