--- a/src/app/componentes/vivienda/editar-tipo-vivienda/editar-tipo-vivienda.component.html
+++ b/src/app/componentes/vivienda/editar-tipo-vivienda/editar-tipo-vivienda.component.html
@@ -6,12 +6,13 @@
             <label for="nombre" class="form-label text-start">Tipo de Vivienda <span
               class="obligatorios">*</span></label>
             <div class="col-12 col-lg pb-1 pb-lg-0">
-              <ng-select  id="nombre" formControlName="nombre" [readonly]="blockEditar" (change)="cambiarId()">
-                <ng-option *ngFor="let tipoVivienda of listaViviendas; let i = index"
-                          [value]="tipoVivienda.id">{{tipoVivienda.nombre}}</ng-option>
-              </ng-select>
+              <div class="form-group w-100">
+                <ng-select  id="nombre" formControlName="nombre" [readonly]="blockEditar" (change)="cambiarId()">
+                  <ng-option *ngFor="let tipoVivienda of listaViviendas; let i = index"
+                            [value]="tipoVivienda.id">{{tipoVivienda.nombre}}</ng-option>
+                </ng-select>
+              </div>
               <input type="hidden"  formControlName="id_tipo">
-
             </div>
             <ng-container *ngIf="!blockEditar">
               <ng-container *ngIf="this.isAdmin">
@@ -39,18 +40,22 @@
             </ng-container>
 
           </div>
-          <div class="row mb-3">
-            <div class="col-12">
-              <label for="text_area" class="form-label text-start">Acceso a la vivienda</label>
-              <textarea formControlName="text_area" name="text_area" id="text_area" class="form-control"
-                        [readonly]="blockEditar"></textarea>
+          <div class="row ">
+            <div class="mb-3 col-12">
+              <div class="form-group w-100">
+                <label for="text_area" class="form-label text-start">Acceso a la vivienda</label>
+                <textarea formControlName="text_area" name="text_area" id="text_area" class="form-control"
+                          [readonly]="blockEditar"></textarea>
+                </div>
             </div>
           </div>
           <div class="row mb-3">
-            <div class="col-12">
-              <label for="text_area" class="form-label text-start">Otros datos de la vivienda</label>
-              <textarea formControlName="text_area2" name="text_area" id="text_area2" class="form-control"
-                        [readonly]="blockEditar"></textarea>
+            <div class="col-12 ">
+              <div class="form-group w-100">
+                <label for="text_area" class="form-label text-start">Otros datos de la vivienda</label>
+                <textarea formControlName="text_area2" name="text_area" id="text_area2" class="form-control"
+                          [readonly]="blockEditar"></textarea>
+              </div>
             </div>
           </div>
           <input type="hidden" formControlName="id_tipo">
