--- a/src/app/componentes/agenda/lista-agenda/agenda.component.html
+++ b/src/app/componentes/agenda/lista-agenda/agenda.component.html
@@ -9,34 +9,46 @@
       </ol>
     </nav>
     <h1 class="component-title">
-      {{ fechaString }}
+      {{ tituloAgenda }}
     </h1>
 
-      <button type="button" class="btn btn-success me-5 float-end" [routerLink]="['/agenda/nueva']">
-        Nueva Agenda
-      </button>
 
     <div style="display: none" id="actualizarPagina"></div>
 
     <div class="form-group mb-3">
       <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..." [(ngModel)]="inputBusqueda">
     </div>
+    <button type="button" class="btn btn-success me-5 mt-4 float-end" [routerLink]="['/agenda/nueva']">
+      Nueva Agenda
+    </button>
 
     <div class="form-group mb-3">
-      <label for="busquedaPorFecha">Búsqueda por fecha</label>
-      <input id="busquedaPorFecha" name="busquedaPorFecha" type="date" class="form-control"
-             (ngModelChange)="buscarPorFecha($event)" [(ngModel)]="inputFechaBusqueda">
+      <div class="row">
+        <div class="col-6">
+          <label for="busquedaPorFecha">Búsqueda por fecha</label>
+          <input id="busquedaPorFecha" name="busquedaPorFecha" type="date" class="form-control"
+              (ngModelChange)="buscarPorFecha($event)" [(ngModel)]="inputFechaBusqueda">
+        </div>
+        <div class="col-6">
+          <label for="busquedaUsuarioServicio">Usuario del servicio</label>
+          <ng-select name="busquedaUsuarioServicio" id="busquedaUsuarioServicio" class="ng-valid" [(ngModel)]="busquedaUsuarioServicioId" (change)="buscarPorUsuarioServicio()">
+            <ng-option class="agenda_option" *ngFor="let usuarioServicio of usuariosServicio; let i = index" [value]="usuarioServicio.id">
+              {{usuarioServicio?.id_persona?.nombre}} {{usuarioServicio?.id_persona?.apellidos}} -  {{usuarioServicio?.id_persona?.dni}} -  {{usuarioServicio?.numero_expediente}}
+            </ng-option>
+          </ng-select>
+        </div>
+      </div>
     </div>
     <div class="table-responsive m-2">
       <table id="tableList" class="table table-hover text-center">
         <thead>
         <tr class="table-purple">
           <th class="ordenable" (click)="ordenacionTabla(0, 'id_tipo_agenda.importancia')" scope="col">Prioridad <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(1, 'id_paciente.id_persona.nombre')" scope="col">Nombre <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(2, 'id_paciente.id_persona.apellidos')" scope="col">Apellido <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(3, 'id_tipo_agenda.nombre')" scope="col">Tipo Agenda <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(4, 'id_paciente.numero_expediente','','number')" scope="col">Nº Expediente <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(5, 'fecha_prevista')" scope="col">Hora prevista <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(1, 'fecha_prevista')" scope="col" title="Fecha y hora prevista">Fecha y hora <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(2, 'id_paciente.id_persona.nombre')" scope="col">Nombre <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(3, 'id_paciente.id_persona.apellidos')" scope="col">Apellido <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(4, 'id_tipo_agenda.nombre')" scope="col">Tipo Agenda <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(5, 'id_paciente.numero_expediente','','number')" scope="col">Nº Expediente <i class="fas fa-sort"></i></th>
           <th scope="col"></th>
         </tr>
         </thead>
