--- a/src/app/components/recursos/recurso-comunitario/crear-recurso-comunitario/crear-recurso-comunitario.component.html
+++ b/src/app/components/recursos/recurso-comunitario/crear-recurso-comunitario/crear-recurso-comunitario.component.html
@@ -90,15 +90,15 @@
         </div>
       </div>
 
-      <div class="form-group mb-3">
-        <label for="provincia" class="form-label">Provincia</label>
-        <input type="text" name="provincia" id="provincia" class="form-control" formControlName="provincia">
+      <div class="form-group mb-3">        
+        <label for="provincia" class="form-label text-start">Provincia <span class="obligatorios">*</span></label>
+        <ng-select id="tipoTeleasistencia" formControlName="provincia" id="provincia" title="{{nuevoRecurso.value.provincia}}">
+          <ng-option *ngFor="let provincia of listaProvincias; let i = index"
+                     [value]="provincia" [title]="provincia">{{provincia}}</ng-option>
+        </ng-select>
         <div *ngIf="valorForm.provincia.invalid && (valorForm.provincia.dirty || valorForm.provincia.touched)" class="alert alert-secondary" role="alert">
           <div *ngIf="valorForm.provincia.errors?.required">
             La provincia es obligatoria
-          </div>
-          <div *ngIf="valorForm.provincia.errors?.maxLength">
-            La provincia es muy larga
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn btn-outline-success m-1">
+      <button type="submit" class="btn btn-outline-success m-1" [disabled]="nuevoRecurso.invalid">
         Guardar
       </button>
       <button type="button" class="btn btn-outline-secondary m-1" [routerLink]="['/recursos_comunitarios/listar/',id]">
