Eliminada paginación #70 Cambiado botón volver en alarmas y agendas resueltas #69 Resuelto error fechas en seguimiento de teleoperador #61

--- a/src/app/componentes/agenda/item-agenda/item-agenda.component.html
+++ b/src/app/componentes/agenda/item-agenda/item-agenda.component.html
@@ -17,7 +17,7 @@
   </button>
 
   <!-- Button trigger modal -->
-  <button type="submit" class="btn btn-outline-danger m-1" (click)="modalConfirmacion()"
+  <button type="submit" class="btn btn-outline-danger m-1" (click)="modalConfirmacion()" *ngIf="this.borrar"
   ><i class="fa fa-trash"></i></button>
 
 
