--- a/src/app/componentes/seguimiento_teleoperador/lista-alarmas-resueltas/lista-alarmas-resueltas.component.html
+++ b/src/app/componentes/seguimiento_teleoperador/lista-alarmas-resueltas/lista-alarmas-resueltas.component.html
@@ -26,30 +26,23 @@
       <table id="tableList" class="table table-hover text-center">
         <thead>
         <tr class="table-purple">
-          <th class="ordenable" (click)="ordenacionTabla(0, 'id_tipo_agenda.importancia')" scope="col">Prioridad <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(1, 'id_paciente.id_persona.nombre ')" scope="col">Nombre <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(2, 'id_paciente.id_persona.apellidos')" scope="col">Apellido <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(3, 'id_tipo_agenda.nombre ')" scope="col">Tipo Agenda <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(4, 'id_paciente.numero_expediente')" scope="col">Nº Expediente <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(5, 'fecha_prevista')" scope="col">Hora y Fecha <i class="fas fa-sort"></i></th>
-
+          <th class="ordenable" (click)="ordenacionTabla(0, 'id_agenda.id_tipo_agenda.importancia')" scope="col">Prioridad <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(1, 'id_agenda.fecha_prevista')" scope="col">Hora y Fecha <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(2, 'id_agenda.id_paciente.id_persona.nombre')" scope="col">Nombre <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(3, 'id_agenda.id_paciente.id_persona.apellidos')" scope="col">Apellido <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(4, 'id_agenda.id_tipo_agenda.nombre')" scope="col">Tipo Agenda <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(5, 'id_agenda.id_paciente.numero_expediente')" scope="col">Nº Expediente <i class="fas fa-sort"></i></th>
           <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
-        <tr
-          *ngFor="let agenda of agendas | filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: 10, currentPage: numPaginacion }"
-          app-item-agendas-resueltas [agenda]="agenda.id_agenda"
-          class="{{agenda.fecha_resolucion === null ? 'noResuelta' : 'resuelta'}}">
-        </tr>
-
+          <tr
+            *ngFor="let agenda of agendas | filtroBusqueda: inputBusqueda"
+            app-item-agenda [agenda]="agenda.id_agenda" [borrar]="false"
+            class="{{agenda.fecha_resolucion === null ? 'noResuelta' : 'resuelta'}}">
+          </tr>
         </tbody>
       </table>
-      <pagination-controls
-        previousLabel="Anterior"
-        nextLabel="Siguiente"
-        responsive="true"
-        (pageChange)="numPaginacion = $event"></pagination-controls>
     </div>
 
     <h5>Alarmas: {{peticion.alarmas_total}}</h5>
@@ -58,22 +51,21 @@
         <thead>
         <tr class="table-purple">
           <th class="ordenable" (click)="ordenacionTabla2(6, 'estado_alarma')" scope="col">Estado <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla2(7, 'fecha_registro')" scope="col">Hora y Fecha Registro <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla2(7, 'fecha_registro')" scope="col">Fecha y hora<i class="fas fa-sort"></i></th>
           <th class="ordenable" (click)="ordenacionTabla2(8, 'observaciones')" scope="col">Observaciones <i class="fas fa-sort"></i></th>
           <th class="ordenable" (click)="ordenacionTabla2(9, 'resumen')" scope="col">Resumen <i class="fas fa-sort"></i></th>
           <th class="ordenable" (click)="ordenacionTabla2(10, 'id_tipo_alarma.nombre','id_tipo_alarma.id_clasificacion_alarma.nombre')" scope="col">Tipo alarma <i class="fas fa-sort"></i></th>
           <th class="ordenable" (click)="ordenacionTabla2(11, 'id_paciente_ucr.id_persona.nombre')" scope="col">Paciente UCR <i class="fas fa-sort"></i></th>
           <th class="ordenable" (click)="ordenacionTabla2(12, 'id_terminal.numero_terminal')" scope="col">Número Terminal <i class="fas fa-sort"></i></th>
+          <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
-
-        <tr *ngFor="let alarma of alarmas| filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: 10, currentPage: numPaginacion }"
-            item-alarmas-resueltas [alarma]="alarma" class="{{seleccionarFondo(alarma)}}">
-        </tr>
+          <tr *ngFor="let alarma of alarmas| filtroBusqueda: inputBusqueda " [mostrarBorrar]="false" [mostrarTeleoperador]="false"
+          app-item-alarma [alarma]="alarma" class="{{seleccionarFondo(alarma)}}">
+          </tr>
         </tbody>
       </table>
-      <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" responsive="true" (pageChange)="numPaginacion = $event"></pagination-controls>
     </div>
 
   </div>
