--- a/src/app/components/recursos/recurso-comunitario/item-recurso-comunitario/item-recurso-comunitario.component.html
+++ b/src/app/components/recursos/recurso-comunitario/item-recurso-comunitario/item-recurso-comunitario.component.html
@@ -7,7 +7,7 @@
 <td>{{ recurso_comunitario?.id_direccion?.direccion}}</td>
 <td>
   <!-- Botón para ver el recurso específico -->
-  <button [routerLink]="['/recursos_comunitarios/ver_recursos',recurso_comunitario.id]" class="btn btn-outline-info m-1"><i class="fa fa-eye"></i></button>
+  <button [routerLink]="['/recursos_comunitarios/ver_recursos',recurso_comunitario.id]" class="btn btn-outline-primary m-1"><i class="fa fa-eye"></i></button>
   <!-- Botón para modificar el recurso comunitario-->
   <button type="submit" class="btn btn-outline-warning"
           [routerLink]="['/recursos_comunitarios/modificar',recurso_comunitario.id]">
