--- a/src/styles.scss
+++ b/src/styles.scss
@@ -629,12 +629,17 @@ li.active {
 
 .spinner {
   position: fixed;
-  left: 1vh;
-  bottom: 1vh;
+  background: #ffffff7a;
+  width: 100%;
+  height: 100vw;
   z-index: 100;
 }
-.spinner>img{
+.spinner>img{    
   width: 100px;
+  left: calc(50vw - 50px);
+  position: fixed;
+  z-index: 101;
+  bottom: calc(50vh - 30px);
 }
 .botonAyuda{
   cursor: help;
