--- a/src/app/componentes/centro-sanitario-alarma/lista-centro-sanitario-alarma/lista-centro-sanitario-alarma.component.html
+++ b/src/app/componentes/centro-sanitario-alarma/lista-centro-sanitario-alarma/lista-centro-sanitario-alarma.component.html
@@ -8,7 +8,7 @@
     </nav>
     <h1 class="component-title">Centro sanitarios en alarma</h1>
     <div class="form-group mb-3">
-      <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..." [(ngModel)]="inputBusqueda">
+      <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..."  (ngModelChange)="onBusquedaChange()"  [(ngModel)]="inputBusqueda">
     </div>
     <div class="table-responsive m-2">
       <table id="tableList" class="table table-hover text-center">
