--- a/src/app/componentes/agenda/nuevo-agenda/nuevo-agenda.component.html
+++ b/src/app/componentes/agenda/nuevo-agenda/nuevo-agenda.component.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col-4 col-lg-1 p-0">
                   <button class="btn btn-danger botonOperacion"
-                          (click)="eliminarTipo()" [disabled]="botonDes()">
+                          (click)="modalConfirmacion()" [disabled]="botonDes()">
                     <i class="fa fa-solid fa-trash"></i></button>
                 </div>
               </ng-container>
