--- a/src/app/componentes/historico-agenda/nuevo-historico-agenda/nuevo-historico-agenda.component.html
+++ b/src/app/componentes/historico-agenda/nuevo-historico-agenda/nuevo-historico-agenda.component.html
@@ -51,17 +51,6 @@
       </div>
 
       <div class="form-group mb-3">
-        <label for="id_agenda" class="form-label">Agenda</label>
-        <input name="id_agenda" id="id_agenda" formControlName="agenda" disabled
-                class="form-select" required>
-        <div *ngIf="form.agenda.invalid && (form.agenda.dirty || form.agenda.touched)" class="alert alert-secondary" role="alert">
-          <div *ngIf="form.agenda.errors?.required">
-            El campo agenda es obligatorio.
-          </div>
-        </div>
-      </div>
-
-      <div class="form-group mb-3">
         <label for="id_teleoperador" class="form-label">Teleoperador</label>
         <input type="text" class="form-control ng-valid" name="id_teleoperador" id="id_teleoperador" required disabled [value]="teleoperador.first_name + ' ' + teleoperador.last_name">
         <div *ngIf="form.teleoperador.invalid && (form.teleoperador.dirty || form.teleoperador.touched)" class="alert alert-secondary" role="alert">
@@ -70,16 +59,10 @@
           </div>
         </div>
       </div>
-
       <div class="form-group mb-3">
-        <label for="fecha_llamada" class="form-label">Fecha de llamada</label>
-        <input type="datetime-local" name="fecha_llamada" id="fecha_llamada" class="form-control"
-               required maxlength="200" formControlName="fecha_llamada" disabled>
-        <div *ngIf="form.fecha_llamada.invalid && (form.fecha_llamada.dirty || form.fecha_llamada.touched)" class="alert alert-secondary" role="alert">
-          <div *ngIf="form.fecha_llamada.errors?.required">
-            La fecha es obligatoria
-          </div>
-        </div>
+        <label class="form-label">Fecha de llamada</label>
+        <input type="text" name="agenda.fecha_resolucion" id="agenda.fecha_resolucion" class="form-control"
+               required maxlength="200"  disabled [value]="agenda.fecha_resolucion | date:'dd/MM/yyyy HH:mm'">
       </div>
 
       <div class="form-group mb-3">
